# mlm-project

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md
docs/: EMERGENCY_STOP_IMPLEMENTATION.md  EMERGENCY_STOP_TRANSPLANT_GUIDE.md
emergency_stop_transplant/src/mlm_avoid_bringup/: CMakeLists.txt  README.md  package.xml
emergency_stop_transplant/src/mlm_avoid_bringup/config/: avoid_params.yaml
emergency_stop_transplant/src/mlm_avoid_bringup/launch/: full_system.launch.py  safety_only.launch.py
emergency_stop_transplant/src/mlm_avoid_msgs/: README.md
emergency_stop_transplant/src/mlm_avoid_sync/: package.xml  setup.py
emergency_stop_transplant/src/mlm_avoid_sync/mlm_avoid_sync/: sensor_synchronizer.py
pc/: README.md  convert_map_to_png.sh  setup.sh  ssh.md
pc/cyclonedds/: cyclonedds.xml
pc/ros2_ws/src/navigation/: CMakeLists.txt
pc/ros2_ws/src/navigation/config/: nav2_controller_dwb.yaml  nav2_controller_teb.yaml  nav2_params.yaml  nav2_params_ackermann.yaml
pc/ros2_ws/src/navigation/launch/: navigation.launch.py  navigation_pc.launch.py  rtabmap_navigation.launch.py  rviz_navigation.launch.py  rviz_rtabmap_navigation.launch.py
pc/ros2_ws/src/slam/: CMakeLists.txt
pc/ros2_ws/src/slam/config/: slam_params.yaml
pc/ros2_ws/src/slam/launch/: rtabmap_slam.launch.py  rtabmap_slam0.launch.py  rviz_rtabmap.launch.py  rviz_slam.launch.py  slam.launch.py
pc/ros2_ws/src/slam/maps/: map_small.yaml  mlm_map.pgm  mlm_map.yaml
robot/: README.md
robot/cyclonedds/: cyclonedds.xml  cyclonedds_robot2.xml
robot/ros2_ws/src/app/app/: line_following.py  object_tracking.py
robot/ros2_ws/src/bringup/launch/: bringup.launch.py  mlm_bringup.launch.py
robot/ros2_ws/src/camera_utils/: package.xml  setup.py
robot/ros2_ws/src/camera_utils/camera_utils/: color_sender.py
robot/ros2_ws/src/camera_utils/launch/: color_sender.launch.py
robot/ros2_ws/src/mlm_avoid_bringup/launch/: avoid.launch.py
robot/ros2_ws/src/mlm_avoid_msgs/: CMakeLists.txt
robot/ros2_ws/src/mlm_avoid_safety/: README.md  setup.cfg
robot/ros2_ws/src/mlm_avoid_safety/mlm_avoid_safety/: ttc_calculator.py
robot/ros2_ws/src/mlm_avoid_safety/test/: conftest.py
robot/ros2_ws/src/mlm_avoid_sync/launch/: sync.launch.py
robot/ros2_ws/src/mlm_avoid_sync/test/: conftest.py
robot/ros2_ws/src/my_test_pkg/: package.xml
robot/ros2_ws/src/parking_map_models/: CMakeLists.txt  package.xml
robot/ros2_ws/src/parking_map_models/models/parking_map/: model.sdf
robot/ros2_ws/src/parking_map_models/models/parking_map/meshes/: parking_map.mtl
robot/ros2_ws/src/parking_map_models/models/parking_side_map/: model.sdf
robot/ros2_ws/src/parking_map_models/models/parking_side_map/meshes/: parking_side_map.mtl
robot/ros2_ws/src/path_player_pkg/config/: motion_params.yaml
robot/ros2_ws/src/path_player_pkg/data/: test_path_3m.csv
robot/ros2_ws/src/path_player_pkg/launch/: motion_controller.launch.py
robot/ros2_ws/src/path_player_pkg/path_player_pkg/: __init__.py
robot/ros2_ws/src/perception_bridge/: data_logger.py  package.xml  setup.py  smart_teleop_logger.py
robot/ros2_ws/src/perception_bridge/perception_bridge/: perception_bridge_node.py
robot/ros2_ws/src/perception_msgs/msg/: ObjectArray.msg
robot/ros2_ws/src/peripherals/: setup.py
robot/ros2_ws/src/peripherals/config/: usb_cam_param.yaml
robot/ros2_ws/src/peripherals/launch/: imu_filter.launch.py  lidar.launch.py  teleop_key_control.launch.py  usb_cam.launch.py
robot/ros2_ws/src/peripherals/peripherals/: joystack2.py
robot/ros2_ws/src/slam/maps/: map_01.pgm  map_01.yaml
robot/third_party_ws/src/laser_filters/src/: scan_to_scan_filter_chain.cpp
robot2/: README.md
robot2/cyclonedds/: cyclonedds.xml
robot2/ros2_ws/: robot_env.sh
robot2/ros2_ws/src/app/app/: hand_gesture.py
robot2/ros2_ws/src/app/launch/: start_app.launch.py
robot2/ros2_ws/src/bringup/bringup/: startup_check.py
robot2/ros2_ws/src/bringup/launch/: bringup_ns.launch.py  mlm_bringup.launch.py
robot2/ros2_ws/src/camera_utils/config/: params.yaml
robot2/ros2_ws/src/mlm_avoid_bringup/config/: avoid_params.yaml
robot2/ros2_ws/src/mlm_avoid_msgs/: package.xml
robot2/ros2_ws/src/mlm_avoid_msgs/msg/: SyncedData.msg
robot2/ros2_ws/src/mlm_avoid_safety/: package.xml  setup.py
robot2/ros2_ws/src/mlm_avoid_safety/mlm_avoid_safety/: safety_node.py
robot2/ros2_ws/src/mlm_avoid_safety/test/: test_ttc_calculator.py
robot2/ros2_ws/src/mlm_avoid_sync/: README.md  setup.cfg
robot2/ros2_ws/src/my_test_pkg/: setup.py
robot2/ros2_ws/src/path_player_pkg/: CMakeLists.txt  package.xml
robot2/ros2_ws/src/path_player_pkg/action/: FollowPath.action
robot2/ros2_ws/src/path_player_pkg/config/: path_player_params.yaml
robot2/ros2_ws/src/path_player_pkg/data/: path_07190531.csv  test_path.csv
robot2/ros2_ws/src/path_player_pkg/launch/: path_player.launch.py
robot2/ros2_ws/src/path_player_pkg/path_player_pkg/: motion_controller.py  path_player_server.py  safety_guard_module.py
robot2/ros2_ws/src/path_player_pkg/resource/: path_player_pkg
robot2/ros2_ws/src/perception_bridge/: CLAUDE.md  pedestrian_patrol.py
robot2/ros2_ws/src/perception_msgs/: CMakeLists.txt  package.xml
web/: .env  .env.example  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/public/maps/: mlm_map.pgm  mlm_map.yaml  mlm_map_org.yaml  my_map2.pgm
web/src/: index.css  vite-env.d.ts
web/src/components/: CameraView.tsx  ConnectionStatus.tsx  ControlPanel.tsx  Dashboard.tsx  LidarView.tsx  MapView.tsx  RobotPanel.tsx  RobotSelector.tsx  RobotStatusPanel.tsx  SetGoalPanel.tsx  SetInitialPosePanel.tsx  index.ts
web/src/config/: robots.ts
web/src/hooks/: index.ts  useCameraImage.ts  useControlMode.ts  useEmergencyStop.ts  useGoalPublisher.ts  useInitialPose.ts  useLidarScan.ts  useMapInteraction.ts  useNavigation.ts  useRobotState.ts  useRosBridge.ts
web/src/stores/: controlModeStore.ts  robotStore.ts
web/src/types/: ros.ts  roslib.d.ts
(+36 files in other folders)
