<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mlm_avoid_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for MLM emergency avoidance system</description>
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mlm_avoid_msgs</exec_depend>
  <exec_depend>mlm_avoid_sync</exec_depend>
  <exec_depend>mlm_avoid_safety</exec_depend>
  <!-- path_player_pkg 제거: DOG robot은 Nav2 사용, GT 전용 full_system.launch.py는 미사용 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
